--- a/card.html
+++ b/card.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Каталог</title>
+	<title>Корзина товара</title>
 	<link rel="stylesheet" href="style/style.css">
 </head>
 <body>
@@ -12,16 +12,14 @@
 		<nav>
 			<ul class="hor_menu">
 				<li><a href="index.html">Главная</a></li>
-				<li class="hor_menu_activ">Каталог</li>
-				<li><a href="card.html">Корзина</a></li>
+				<li><a href="product.html">Каталог</a></li>
+				<li class="hor_menu_activ"> Корзина </li>
 			</ul>
 		</nav>
 		<button class="cart-button" type="button">Корзина</button>
 	</header>
 	<main>
-		<div class="goods-list"></div>
+		
 	</main>
-
-	<script src="js/product.js"></script>
 </body>
 </html>
