--- a/card.html
+++ b/card.html
@@ -17,9 +17,11 @@
 			</ul>
 		</nav>
 		<button class="cart-button" type="button">Корзина</button>
+		<div class="cart-block invisible"></div>
 	</header>
 	<main>
 		
 	</main>
+	<script src="js/product.js"></script>
 </body>
 </html>
