--- a/product.html
+++ b/product.html
@@ -17,6 +17,7 @@
 			</ul>
 		</nav>
 		<button class="cart-button" type="button">Корзина</button>
+		<div class="cart-block invisible"></div>
 	</header>
 	<main>
 		<div class="goods-list"></div>
