--- a/product.html
+++ b/product.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Каталог</title>
 	<link rel="stylesheet" href="style/style.css">
+	<link rel="stylesheet" href="style/normalize.css">
 </head>
 <body>
 	<header>
@@ -16,13 +17,21 @@
 				<li><a href="card.html">Корзина</a></li>
 			</ul>
 		</nav>
-		<button class="cart-button" type="button">Корзина</button>
-		<div class="cart-block invisible"></div>
+		<div class="cart">
+			<form action="#" class="search-form">
+				<input type="text" class="search-field">
+				<button class="btn-search" type="submit">
+						<i class="fas fa-search"></i>
+				</button>
+			</form>
+			<button class="cart-button" type="button">Корзина</button>
+			<div class="cart-block invisible"></div>
+		</div>
 	</header>
 	<main>
 		<div class="goods-list"></div>
 	</main>
-
+	<script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js" integrity="sha384-0pzryjIRos8mFBWMzSSZApWtPl/5++eIfzYmTgBBmXYdhvxPc+XcFEk+zJwDgWbP" crossorigin="anonymous"></script>
 	<script src="js/product.js"></script>
 </body>
 </html>
