--- a/product.html
+++ b/product.html
@@ -9,29 +9,51 @@
 	<link rel="stylesheet" href="style/normalize.css">
 </head>
 <body>
+<div id="app">
 	<header>
-		<nav>
-			<ul class="hor_menu">
-				<li><a href="index.html">Главная</a></li>
-				<li class="hor_menu_activ">Каталог</li>
-				<li><a href="card.html">Корзина</a></li>
-			</ul>
-		</nav>
+		<div class="logo">E-shop</div>
 		<div class="cart">
-			<form action="#" class="search-form">
-				<input type="text" class="search-field">
-				<button class="btn-search" type="submit">
-						<i class="fas fa-search"></i>
-				</button>
-			</form>
-			<button class="cart-button" type="button">Корзина</button>
-			<div class="cart-block invisible"></div>
+				
+				<form action="#" class="search-form" @submit.prevent="filter">
+						<input type="text" class="search-field" v-model="userSearch">
+						<button type="submit" class="btn-search">
+								<i class="fas fa-search"></i>
+						</button>
+				</form>
+				<button class="btn-cart" type="button" @click="showCart = !showCart">Корзина</button>
+				<div class="cart-block" v-show="showCart">
+						<p v-if="!cartItems.length">Cart is empty</p>
+						<div class="cart-item" v-for="item of cartItems" :key="item.id_product">
+								<div class="product-bio">
+										<img :src="imgCart" alt="Some img">
+										<div class="product-desc">
+												<div class="product-title">{{ item.product_name }}</div>
+												<div class="product-quantity">Quantity: {{ item.quantity }}</div>
+												<div class="product-single-price">$ {{ item.price }} each</div>
+										</div>
+								</div>
+								<div class="right-block">
+										<div class="product-price">{{item.quantity*item.price}}</div>
+										<button class="del-btn" @click="remove(item)">&times;</button>
+								</div>
+						</div>
+				</div>
 		</div>
-	</header>
+</header>
 	<main>
-		<div class="goods-list"></div>
+		<div class="products">
+			<div class="product-item" v-for="product of filtered" :key="product.id_product">
+					<img :src="imgProduct" alt="Some img">
+					<div class="desc">
+							<h3>{{product.product_name}}</h3>
+							<p>{{product.price}}</p>
+							<button class="buy-btn" @click="addProduct(product)">Купить</button>
+					</div>
+			</div>
+	</div>
 	</main>
 	<script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js" integrity="sha384-0pzryjIRos8mFBWMzSSZApWtPl/5++eIfzYmTgBBmXYdhvxPc+XcFEk+zJwDgWbP" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/vue@2.7.8"></script>
 	<script src="js/product.js"></script>
 </body>
 </html>
